made changes in topbar

--- a/client/src/component/topbar/Topbar.scss
+++ b/client/src/component/topbar/Topbar.scss
@@ -19,6 +19,11 @@
 
         .profile{
             flex: 2;
+
+            icon{
+                height: 40 px;
+                width: 60px; 
+            }
         }
     }
 
