--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,9 @@
-a{
-    text-decoration: none;
-    color: inherit;
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+     ::before,
+     ::after {
+        box-sizing: border-box;
+    }
 }
