--- a/client/src/component/cards/cards.css
+++ b/client/src/component/cards/cards.css
@@ -1,5 +1,5 @@
 .home-cards {
-    margin-top: 50px;
+    margin: 35px 0;
     /* border: 1px solid green; */
     box-shadow: 0px 2px 4px black !important;
 }
