--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -2,3 +2,10 @@
     display: flex;
     justify-content: space-evenly;
 }
+
+.crud-and-graph {
+    padding: 10px;
+    margin: 30px;
+    display: flex;
+    justify-content: space-between;
+}
