--- a/client/src/component/news/news-board/NewsBoard.scss
+++ b/client/src/component/news/news-board/NewsBoard.scss
@@ -2,8 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: scroll;
 
     .heading{
         margin: 15px;
+    }
+      
+    &::-webkit-scrollbar {
+        display: none;
     }
 }
