hide scrollbar from news page

--- a/client/src/components/news/news-cards/NewsCards.scss
+++ b/client/src/components/news/news-cards/NewsCards.scss
@@ -1,6 +1,15 @@
+body{
+    overflow: hidden;
+}
+
 .news-cards{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     // margin: 20px;
+    
+    &::-webkit-scrollbar {
+        display: none;
+        scrollbar-width: none;
+    }
 }
