--- a/client/src/pages/news/News.scss
+++ b/client/src/pages/news/News.scss
@@ -9,6 +9,9 @@
         overflow: scroll;
         height: 100vh;
         
+        &::-webkit-scrollbar{
+            display: none;
+        }
     }
 
     .news-right{
